# power

./: .gitignore  PLAN.md  README.md  amplify.yml
.github/workflows/: daily-pull.yml
data/processed/: _watermark.json  cems_targets.parquet  resource_map.json
data/processed/bids_dam/: 2025-07-01.parquet  2025-07-02.parquet  2025-07-03.parquet  2025-07-04.parquet  2025-07-05.parquet  2025-07-06.parquet  2025-07-07.parquet  2025-07-08.parquet  2025-07-09.parquet  2025-07-10.parquet  2025-07-11.parquet  2025-07-12.parquet  2025-07-13.parquet  2025-07-14.parquet  2025-07-15.parquet  2025-07-16.parquet  2025-07-17.parquet  2025-07-18.parquet  2025-07-19.parquet  2025-07-20.parquet  2025-07-21.parquet  2025-07-22.parquet  2025-07-23.parquet  2025-07-24.parquet  2025-07-25.parquet  2025-07-26.parquet  2025-07-27.parquet  2025-07-28.parquet  2025-07-29.parquet  2025-07-30.parquet  2025-07-31.parquet  2025-08-01.parquet  2025-08-02.parquet  2025-08-03.parquet  2025-08-04.parquet  2025-08-05.parquet  2025-08-06.parquet  2025-08-07.parquet  2025-08-08.parquet  2025-08-09.parquet  (+241 more)
data/results/: M2_FINDINGS.md  fingerprint_315_alamitos.txt  fingerprint_350_ormond.txt  seq_133660_hourly.parquet
infra/: README.md  s3-bucket-policy.json
map/: index.html  package-lock.json  package.json
map/public/: plants.json
map/src/: main.js  style.css
pipeline/: bidgap_preview.py  build_plants.py  daily_pull.py  fetch_bids.py  fetch_lmp.py  fingerprint.py  oasis_client.py  pyproject.toml  resolve_resources.py  s3_sync.py
pipeline/tests/: test_client_and_pull.py  test_pipeline.py
(+3 files in other folders)
