[project]
name = "power-pipeline"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.41",
    "gridstatus>=0.34.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyshp>=3.1.4",
    "pytz>=2026.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
